<resources>
    <string name="app_name">Email Authentication</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="sign_in">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="or">OR</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">WELCOME</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? SIGN UP</string>
    <string name="back_button">back</string>
    <string name="username">UserName</string>
    <string name="todo">TODO</string>
    <string name="signUpTologin">Already have an account? LOGIN</string>
    <string name="logout">LOGOUT</string>
</resources>