<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_arrow_back"
        android:contentDescription="@string/back_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/auth_background"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/signUp_floating_google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutLinear"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/google"
            android:elevation="30dp"
            android:focusable="true"
            app:srcCompat="@drawable/google_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="38dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/credential_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signUp_user_name"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp"
                android:autofillHints="username"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="#546E7A"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/signUp_email"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="#546E7A"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/signUp_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="38dp"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="#546E7A"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />



            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="38dp"
                android:background="@drawable/button_bg"
                android:text="@string/sign_in"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/credential_layout"
            android:layout_marginStart="38dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="38dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@color/black" />

            <TextView
                android:id="@+id/or"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/or" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@color/black" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>